# iberorust--engine

./: Cargo.toml  config.toml
infra/dev/: Dockerfile  docker-compose.yml
migration/: Cargo.toml
migration/resources/: seed_courses.sql  seed_posts.sql  seed_references.sql
migration/resources/courses/: _all_courses.json  polkadot-smart-contracts.json  rust-301.json  rust-ai.json  rust-arch.json  rust-backend.json  rust-concurrency.json  rust-fundamentals.json  rust-macros.json  rust-microservices.json  rust-neobank.json  rust-serialization.json  rust-solana.json  rust-tower.json  rust-web3.json
migration/resources/posts/: _all_posts.json  async-traits-the-hard-parts.json  case-study-rewriting-a-c-engine.json  idiomatic-error-handling.json  macros-101-don-t-repeat-yourself.json  rust-1-79-what-s-new.json  rust-in-the-linux-kernel.json  the-webassembly-component-model.json  tokio-vs-async-std.json  zero-copy-deserialization-with-rkyv.json
migration/resources/references/: _all_references.json  asynchronous-programming.json  command-line-apps-in-rust.json  rust-api-guidelines.json  rust-atomics-and-locks.json  rust-by-example.json  rust-compiler-dev-guide.json  rust-design-patterns.json  rust-edition-guide.json  standard-library-std.json  the-cargo-book.json  the-embedded-rust-book.json  the-rust-performance-book.json  the-rust-programming-language.json  the-rust-reference.json  the-rustc-book.json  the-rustdoc-book.json  the-rustonomicon.json  webassembly-with-rust.json
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000002_seed_courses.rs  m20220101_000003_seed_posts.rs  m20220101_000004_seed_references.rs  m20260325_095739_add_admin_and_references.rs  m20260325_174618_m20260401_000001_add_i18n_and_visuals.rs  m20260326_095933_m20260501_000001_add_password_hash.rs
migrations/: 20240101000000_initial_schema.sql
src/: config.rs  error.rs  main.rs  state.rs
src/entities/: certification.rs  chapter.rs  comment.rs  comment_like.rs  course.rs  inquiry.rs  mod.rs  module.rs  notification.rs  post.rs  progress.rs  reference.rs  thread.rs  thread_like.rs  user.rs
src/handlers/: ai.rs  auth.rs  community.rs  contact.rs  course.rs  mod.rs  notification.rs  post.rs  progress.rs  reference.rs  sandbox.rs  upload.rs  user.rs
src/middlewares/: auth.rs
src/models/: common.rs  community.rs  contact.rs  course.rs  mod.rs  notification.rs  post.rs  progress.rs  reference.rs  user.rs
src/repositories/: community.rs  contact.rs  course.rs  mod.rs  notification.rs  post.rs  progress.rs  reference.rs  user.rs
src/services/: auth.rs  auth_test.rs  community.rs  community_test.rs  contact.rs  course.rs  course_test.rs  mod.rs  notification.rs  notification_test.rs  post.rs  post_test.rs  progress.rs  progress_test.rs  reference.rs  user.rs
