[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
futures = "0.3.32"
jsonwebtoken = "10.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
