[package]
name = "app"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
anyhow = "1.0.102"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["multipart"] }
chrono = { version = "0.4.44", features = ["serde"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.32"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.13.2", features = ["json"] }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "postgres-array", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
mockall = "0.14.0"
